--- a/Main-page/assets/css/style.css
+++ b/Main-page/assets/css/style.css
@@ -46,10 +46,8 @@ body.dark{
 
 
 
-
-
 /* ===== Sidebar ===== */
-.sidebar{
+ .sidebar{
     position: fixed;
     top: 0;
     left: 0;
@@ -61,7 +59,7 @@ body.dark{
     z-index: 100;  
 }
 .sidebar.close{
-    width: 98px;
+    width: 120px;
 }
 
 /* ===== Reusable code - Here ===== */
@@ -74,38 +72,19 @@ body.dark{
 }
 
 .sidebar header .image,
-
+.sidebar .icon{
+    min-width: 60px;
+    border-radius: 6px;
+}
 
 .sidebar .icon{
-    min-width: 5px;
-    width: 40px;
+    min-width: 60px;
     border-radius: 6px;
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 20px;
-}
-
-.sidebar li.search-box{
-    border-radius: 6px;
-    background-color: var(--sidebar-color);
-    cursor: pointer;
-    transition: var(--tran-05);
-}
-
-
-.sidebar li.search-box input{
-    height: 100%;
-    width: 100%;
-    outline: none;
-    border: none;
-    background-color: var(--sidebar-color);
-    color: var(--text-color);
-    border-radius: 6px;
-    font-size: 17px;
-    font-weight: 500;
-    transition: var(--tran-05);
-    cursor: pointer;
 }
 
 .sidebar .text,
@@ -156,7 +135,7 @@ header .image-text .profession{
 }
 
 .sidebar header .image img{
-    width: 50px;
+    width: 40px;
     border-radius: 6px;
 }
 
@@ -182,10 +161,6 @@ body.dark .sidebar header .toggle{
     color: var(--text-color);
 }
 
-body.dark .profileCard{
-    color: var(--toggle-color);
-}
-
 .sidebar.close .toggle{
     transform: translateY(-50%) rotate(0deg);
 }
@@ -194,8 +169,28 @@ body.dark .profileCard{
     margin-top: 40px;
 }
 
+.sidebar li.search-box{
+    border-radius: 6px;
+    background-color: var(--primary-color-light);
+    cursor: pointer;
+    transition: var(--tran-05);
+}
+
+.sidebar li.search-box input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    background-color: var(--primary-color-light);
+    color: var(--text-color);
+    border-radius: 6px;
+    font-size: 17px;
+    font-weight: 500;
+    transition: var(--tran-05);
+}
 .sidebar li a{
     list-style: none;
+    height: 100%;
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -213,7 +208,10 @@ body.dark .profileCard{
 .sidebar li a:hover .text{
     color: var(--sidebar-color);
 }
-
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text{
+    color: var(--text-color);
+}
 
 .sidebar .menu-bar{
     height: calc(100% - 55px);
@@ -225,15 +223,12 @@ body.dark .profileCard{
 .menu-bar::-webkit-scrollbar{
     display: none;
 }
-
-
-
-.sidebar.close ~ .home{
-    left: 78px;
-    height: 100vh;
-    width:  100%;;
+.sidebar .menu-bar .mode{
+    border-radius: 6px;
+    background-color: var(--primary-color-light);
+    position: relative;
+    transition: var(--tran-05);
 }
-
 
 .menu-bar .mode .sun-moon{
     height: 50px;
@@ -253,7 +248,7 @@ body.dark .mode .sun-moon i.moon{
     opacity: 0;
 }
 
-.toggle-switch{
+.menu-bar .bottom-content .toggle-switch{
     position: absolute;
     right: 0;
     height: 100%;
@@ -291,9 +286,12 @@ body.dark .switch::before{
 }
 
 .home{
+    position: absolute;
     top: 0;
+    top: 0;
+    left: 250px;
     height: 100vh;
-    width: 100%;
+    width: calc(100% - 250px);
     background-color: var(--body-color);
     transition: var(--tran-05);
 }
@@ -304,6 +302,11 @@ body.dark .switch::before{
     padding: 12px 60px;
 }
 
+.sidebar.close ~ .home{
+    left: 78px;
+    height: 100vh;
+    width: calc(100% - 78px);
+}
 body.dark .home .text{
     color: var(--text-color);
 }
