--- a/Main-page/assets/css/project.css
+++ b/Main-page/assets/css/project.css
@@ -1,5 +1,5 @@
 .project_card_create{
-  min-height: 550px;
+  min-height: 520px;
   min-width: 350px;
   display: flex;
   justify-content: center; 
@@ -13,11 +13,8 @@
 
 
 .project_card{
-  min-height: 550px;
+  min-height: 520px;
   min-width: 350px;
-  display: flex;
-  justify-content: center; 
-  align-items: center;
 }
 
 .project_card:hover{
@@ -26,12 +23,13 @@
 
 
 .project_number{
+    margin: 3px;
     width: 40px;
     height: 40px;
     display: flex;
     justify-content: center; 
     align-items: center;
-    left: 85%;
+    left: 89%;
     background-color: aqua;
     position: absolute;
     border-radius: 50px;
@@ -44,15 +42,16 @@
 }
 
 .project_owner img{
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
     background-color: aqua;
     border-radius: 50%;
-    width: 25%;
+    width: 30%;
 }
 
 .project_owner{
     position: absolute;
-    left: 45%;
-    top: 200px;
+    left: 10%;
+    top: 150px;
 }
 
 .project_owner_name{
@@ -60,12 +59,16 @@
     font-size: 22px;
 }
 .collabs img{
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
     background-color: aqua;
     border-radius: 50%;
-    margin-top: 100px;
-    width: 10%;
+    width: 5%;
 }
 
 .description{
     margin-top: 100px;
+}
+
+.p-button{
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75);
 }
