--- a/Main-page/assets/css/style.css
+++ b/Main-page/assets/css/style.css
@@ -24,10 +24,12 @@
 }
 
 body{
-    min-height: 100vh;
+    min-height: max-content;
     background-color: var(--body-color);
     transition: var(--tran-05);
 }
+
+
 
 ::selection{
     background-color: var(--primary-color);
@@ -288,9 +290,8 @@ body.dark .switch::before{
 .home{
     position: absolute;
     top: 0;
-    top: 0;
     left: 250px;
-    height: 100vh;
+    height: max-content;
     width: calc(100% - 250px);
     background-color: var(--body-color);
     transition: var(--tran-05);
@@ -304,7 +305,7 @@ body.dark .switch::before{
 
 .sidebar.close ~ .home{
     left: 78px;
-    height: 100vh;
+    height: max-content;
     width: calc(100% - 78px);
 }
 body.dark .home .text{
