--- a/Main-page/assets/css/projectById.css
+++ b/Main-page/assets/css/projectById.css
@@ -3,3 +3,11 @@
     border-radius: 50%;
     width: 10%;
 }
+
+.bg1{
+    background-color: #F08779;
+}
+
+.bg2{
+    background-color: #FDEBD8;
+}
