--- a/Main-page/assets/css/teams.css
+++ b/Main-page/assets/css/teams.css
@@ -1,13 +1,11 @@
 .createNewTeam_card{
 
     min-height: 520px;
-    max-width: 350px;
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    font-size: 42px;
-
-
+  min-width: 350px;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  font-size: 42px;
 }
 
 
@@ -31,9 +29,10 @@
 
   
   .project_image{
-      width: 100%;
-      border-radius: 20px;
-      box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
+    width: 100%;
+    height: 220px;
+    border-radius: 20px;
+    box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.75);
   }
   
   .project_owner img{
