--- a/Main-page/assets/css/main_style.css
+++ b/Main-page/assets/css/main_style.css
@@ -408,7 +408,15 @@ body.dark .sidebar li a:hover .text{
     transition: var(--tran-05);
 }
 
+.notification_amount{
 
+    position: absolute;
+    border-radius: 50%;
+    background-color: lightred;
+
+
+
+}
 
 
 
